Reorganised conf and introduced setup

--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -8,7 +8,7 @@ server {
 	# server_name dev.svven.com;
 
 	location /static/ {
-		root /home/svven/web/web/static/;
+		root $STATIC_ROOT; # /home/svven/web/web/static/
 	}
 	location / {
 		proxy_pass http://apps;
