Summarizer config for supervisor

--- a/conf/supervisor/poller.conf
+++ b/conf/supervisor/poller.conf
@@ -18,5 +18,5 @@ directory = $PWD
 stopsignal = INT
 user = $USER
 redirect_stderr = true
-stdout_logfile = $LOG_FOLDER/enqueue.log
+stdout_logfile = $LOG_FOLDER/enqueuer.log
 environment = $ENVIRONMENT
