--- a/conf/supervisor/summarizer.conf
+++ b/conf/supervisor/summarizer.conf
@@ -1,7 +1,7 @@
-[group:poller]
-programs = poller_enqueuer,poller_worker
+[group:summarizer]
+programs = summarizer_enqueuer,summarizer_worker
 
-[program:poller_worker]
+[program:summarizer_worker]
 command = $MANAGE work
 process_name = %(program_name)s_%(process_num)02d
 numprocs = 5
@@ -12,11 +12,11 @@ redirect_stderr = true
 stdout_logfile = $LOG_FOLDER/worker_%(process_num)02d.log
 environment = $ENVIRONMENT
 
-[program:poller_enqueuer]
+[program:summarizer_enqueuer]
 command = $MANAGE enqueue
 directory = $PWD
 stopsignal = INT
 user = $USER
 redirect_stderr = true
-stdout_logfile = $LOG_FOLDER/enqueue.log
+stdout_logfile = $LOG_FOLDER/enqueuer.log
 environment = $ENVIRONMENT
