Configure 4 workers of a kind

--- a/conf/supervisor/summarizer.conf
+++ b/conf/supervisor/summarizer.conf
@@ -4,8 +4,8 @@ programs = summarizer_enqueuer,summarizer_worker
 [program:summarizer_worker]
 command = $MANAGE work
 process_name = %(program_name)s_%(process_num)02d
-numprocs = 5
-directory = $PWD
+numprocs = 4
+directory = $DIRECTORY
 stopsignal = INT
 user = $USER
 redirect_stderr = true
@@ -14,7 +14,7 @@ environment = $ENVIRONMENT
 
 [program:summarizer_enqueuer]
 command = $MANAGE enqueue
-directory = $PWD
+directory = $DIRECTORY
 stopsignal = INT
 user = $USER
 redirect_stderr = true
