--- a/conf/supervisor/poller.conf
+++ b/conf/supervisor/poller.conf
@@ -4,8 +4,8 @@ programs = poller_enqueuer,poller_worker
 [program:poller_worker]
 command = $MANAGE work
 process_name = %(program_name)s_%(process_num)02d
-numprocs = 5
-directory = $PWD
+numprocs = 4
+directory = $DIRECTORY
 stopsignal = INT
 user = $USER
 redirect_stderr = true
@@ -14,7 +14,7 @@ environment = $ENVIRONMENT
 
 [program:poller_enqueuer]
 command = $MANAGE enqueue
-directory = $PWD
+directory = $DIRECTORY
 stopsignal = INT
 user = $USER
 redirect_stderr = true
