Configure web app

--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -7,6 +7,9 @@ server {
 	listen 80;
 	# server_name dev.svven.com;
 
+	access_log $LOG_FOLDER/nginx.access.log;
+	error_log $LOG_FOLDER/nginx.error.log;
+
 	location /static/ {
 		root $STATIC_ROOT; # /home/svven/web/web/static/
 	}
