--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -11,7 +11,7 @@ server {
 	error_log $LOG_FOLDER/nginx.error.log;
 
 	location /static/ {
-		root $STATIC_ROOT; # /home/svven/web/web/static/
+		alias $STATIC_ROOT; # /home/svven/web/web/static/
 	}
 	location / {
 		proxy_pass http://apps;
