--- a/conf/postgre/postgresql.conf
+++ b/conf/postgre/postgresql.conf
@@ -295,7 +295,7 @@ shared_buffers = 128MB			# min 128kB
 
 # - Where to Log -
 
-#log_destination = 'stderr'		# Valid values are combinations of
+#log_destination = 'syslog'		# Valid values are combinations of
 					# stderr, csvlog, syslog, and eventlog,
 					# depending on platform.  csvlog
 					# requires logging_collector to be on.
@@ -328,8 +328,8 @@ shared_buffers = 128MB			# min 128kB
 					# 0 disables.
 
 # These are relevant when logging to syslog:
-#syslog_facility = 'LOCAL0'
-#syslog_ident = 'postgres'
+syslog_facility = 'LOCAL0'
+syslog_ident = 'postgres'
 
 # This is only relevant when logging to eventlog (win32):
 #event_source = 'PostgreSQL'
