--- a/conf/postgre/postgresql.conf
+++ b/conf/postgre/postgresql.conf
@@ -295,7 +295,7 @@ shared_buffers = 128MB			# min 128kB
 
 # - Where to Log -
 
-#log_destination = 'syslog'		# Valid values are combinations of
+log_destination = 'syslog'		# Valid values are combinations of
 					# stderr, csvlog, syslog, and eventlog,
 					# depending on platform.  csvlog
 					# requires logging_collector to be on.
