Redis syslog enabled yes

--- a/conf/redis/redis.conf
+++ b/conf/redis/redis.conf
@@ -104,7 +104,7 @@ logfile /var/log/redis/redis.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
-syslog-enabled no
+syslog-enabled yes
 
 # Specify the syslog identity.
 syslog-ident redis
