--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -5,7 +5,12 @@ upstream apps {
 
 server {
 	listen 80;
-	# server_name dev.svven.com;
+	# server_name svven.com www.svven.com;
+
+	gzip on;
+	gzip_comp_level 3;
+	gzip_proxied any;
+	gzip_types *;
 
 	access_log $LOG_FOLDER/nginx.access.log;
 	error_log $LOG_FOLDER/nginx.error.log;
@@ -16,9 +21,10 @@ server {
 	location / {
 		proxy_pass http://apps;
 		proxy_redirect off;
-		proxy_set_header Host \$host;
+		proxy_set_header Host \$http_host;
 		proxy_set_header X-Real-IP \$remote_addr;
 		proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto \$scheme;
 		# proxy_set_header X-Forwarded-Host \$server_name;
 	}
 }
