Add expires to static files.

--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -17,6 +17,7 @@ server {
 
 	location /static/ {
 		alias $STATIC_ROOT; # /home/svven/web/web/static/
+		expires 1d;
 	}
 	location / {
 		proxy_pass http://apps;
