Update update and no summarizer enqueuer.

--- a/conf/supervisor/summarizer.conf
+++ b/conf/supervisor/summarizer.conf
@@ -1,5 +1,6 @@
 [group:summarizer]
-programs = summarizer_enqueuer,summarizer_worker
+programs = summarizer_worker
+#, summarizer_enqueuer
 
 [program:summarizer_worker]
 command = $MANAGE work
@@ -11,3 +12,12 @@ user = $USER
 redirect_stderr = true
 stdout_logfile = $LOG_FOLDER/worker_%(process_num)02d.log
 environment = $ENVIRONMENT
+
+# [program:summarizer_enqueuer]
+# command = $MANAGE enqueue
+# directory = $DIRECTORY
+# stopsignal = INT
+# user = $USER
+# redirect_stderr = true
+# stdout_logfile = $LOG_FOLDER/enqueuer.log
+# environment = $ENVIRONMENT
