--- a/conf/postgre/postgresql.conf
+++ b/conf/postgre/postgresql.conf
@@ -61,7 +61,7 @@ listen_addresses = '*'		# what IP address(es) to listen on;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+# max_connections = 100			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
@@ -111,7 +111,7 @@ ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'		# (change requires rest
 
 # - Memory -
 
-shared_buffers = 128MB			# min 128kB
+# shared_buffers = 128MB			# min 128kB
 					# (change requires restart)
 #temp_buffers = 8MB			# min 800kB
 #max_prepared_transactions = 0		# zero disables the feature
@@ -594,3 +594,19 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+default_statistics_target = 50 # pgtune wizard 2015-11-03
+maintenance_work_mem = 480MB # pgtune wizard 2015-11-03
+constraint_exclusion = on # pgtune wizard 2015-11-03
+checkpoint_completion_target = 0.9 # pgtune wizard 2015-11-03
+effective_cache_size = 5632MB # pgtune wizard 2015-11-03
+work_mem = 48MB # pgtune wizard 2015-11-03
+wal_buffers = 8MB # pgtune wizard 2015-11-03
+checkpoint_segments = 16 # pgtune wizard 2015-11-03
+shared_buffers = 1920MB # pgtune wizard 2015-11-03
+# max_connections = 80 # pgtune wizard 2015-11-03
+
+#------------------------------------------------------------------------------
+# MY OPTIONS
+#------------------------------------------------------------------------------
+max_connections = 200
+
