--- a/conf/supervisor/poller.conf
+++ b/conf/supervisor/poller.conf
@@ -1,22 +1,13 @@
 [group:poller]
-programs = poller_enqueuer,poller_worker
+programs = poller_worker
 
 [program:poller_worker]
 command = $MANAGE work
 process_name = %(program_name)s_%(process_num)02d
-numprocs = 7
+numprocs = 5
 directory = $DIRECTORY
 stopsignal = INT
 user = $USER
 redirect_stderr = true
 stdout_logfile = $LOG_FOLDER/worker_%(process_num)02d.log
-environment = $ENVIRONMENT
-
-[program:poller_enqueuer]
-command = $MANAGE enqueue
-directory = $DIRECTORY
-stopsignal = INT
-user = $USER
-redirect_stderr = true
-stdout_logfile = $LOG_FOLDER/enqueuer.log
 environment = $ENVIRONMENT
