Nginx to rsyslog and Gunicorn config file.

--- a/conf/supervisor/web.conf
+++ b/conf/supervisor/web.conf
@@ -1,5 +1,5 @@
 [program:web]
-command = $GUNICORN manage:app -b unix:/tmp/gunicorn.sock -w 4
+command = $GUNICORN manage:app -c config.py
 directory = $DIRECTORY
 user = $USER
 redirect_stderr = true
