--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -12,8 +12,8 @@ server {
 	gzip_proxied any;
 	gzip_types *;
 
-	access_log $LOG_FOLDER/nginx.access.log;
-	error_log $LOG_FOLDER/nginx.error.log;
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 
 	location /static/ {
 		alias $STATIC_ROOT; # /home/svven/web/web/static/
@@ -21,6 +21,7 @@ server {
 	}
 	location / {
 		proxy_pass http://apps;
+		proxy_read_timeout 300;
 		proxy_redirect off;
 		proxy_set_header Host \$http_host;
 		proxy_set_header X-Real-IP \$remote_addr;
