Better dealing with rsyslog.

--- a/conf/rsyslog/rsyslog.conf
+++ b/conf/rsyslog/rsyslog.conf
@@ -4,22 +4,23 @@
 #  /usr/share/doc/rsyslog-doc/html/rsyslog_conf.html
 #  Default logging rules can be found in /etc/rsyslog.d/50-default.conf
 
+\$LocalHostName $LOCALHOSTNAME
 
 #################
 #### MODULES ####
 #################
 
-$ModLoad imuxsock # provides support for local system logging
-$ModLoad imklog   # provides kernel logging support
-$ModLoad imfile   # provides text file logging support
+\$ModLoad imuxsock # provides support for local system logging
+\$ModLoad imklog   # provides kernel logging support
+\$ModLoad imfile   # provides text file logging support
 
-$ModLoad imudp    # provides UDP syslog reception
-$UDPServerRun 514
-# $ModLoad imtcp    # provides TCP syslog reception
-# $InputTCPServerRun 514
+\$ModLoad imudp    # provides UDP syslog reception
+\$UDPServerRun 514
+# \$ModLoad imtcp    # provides TCP syslog reception
+# \$InputTCPServerRun 514
 
 # Enable non-kernel facility klog messages
-$KLogPermitNonKernelFacility on
+\$KLogPermitNonKernelFacility on
 
 ###########################
 #### GLOBAL DIRECTIVES ####
@@ -29,31 +30,31 @@ $KLogPermitNonKernelFacility on
 # Use traditional timestamp format.
 # To enable high precision timestamps, comment out the following line.
 #
-$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+\$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 
 # Filter duplicated messages
-$RepeatedMsgReduction on
+\$RepeatedMsgReduction on
 
 #
 # Set the default permissions for all log files.
 #
-$FileOwner syslog
-$FileGroup adm
-$FileCreateMode 0640
-$DirCreateMode 0755
-$Umask 0022
-$PrivDropToUser syslog
-$PrivDropToGroup syslog
+\$FileOwner syslog
+\$FileGroup adm
+\$FileCreateMode 0640
+\$DirCreateMode 0755
+\$Umask 0022
+\$PrivDropToUser syslog
+\$PrivDropToGroup syslog
 
 #
 # Where to place spool and state files
 #
-$WorkDirectory /var/spool/rsyslog
+\$WorkDirectory /var/spool/rsyslog
 
 #
 # Include all config files in /etc/rsyslog.d/
 #
-$IncludeConfig /etc/rsyslog.d/*.conf
+\$IncludeConfig /etc/rsyslog.d/*.conf
 
-# Destination
-# *.* @logs.papertrailapp.com:port
+# Forwarding
+local0.* @$PAPERTRAIL_HOST:$PAPERTRAIL_PORT
